--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tarea final</title>
+    <title></title>
 </head>
 <body>
-    bienvenidos a certus
+    <p>tare de investigacion</p>
+    <!--estos son elementos en linea -->
+      <!-- imag-->
+    <img src="logo.jpeg.jpeg" alt="CERTUS" height="50%" width="50%">
+      <!--<i>-->
+    <p><i>  este es un texto en cursiva</i></p>
+    <!--<p>-->
+    <p>"COMO LA FRASE POPULAR  DICE":<bdo dir="rtl">"frase popular hebrea"</bdo></p>
+        <!--<q>-->
+     <h1><q>grandes jugadores</q></h1>
+         <!--<sup>-->
+ <p> Era  isabel   <sup>una  gran mujer</sup> para  ser la mejor</p>
+  <!--<BIG>-->
+      <P> este es una linea <big> "el poprgarmador" </big> realiza  su  trabajo  eficientemente</P>
+  <!--<samp>-->
+    <p>Cuando presionas la tecla "enter", <samp>La operación ha retornado falso</samp></p>
+ <button>enter<action><samp> sin pagina</samp></action></button>
+
+ <p>Edita tu comentario:</p>
+
+  <p><textarea name="comment">Hola! Creo que estás completamente equivocado!</textarea></p>
+
+  <p>
+
+    <input type="submit" value="Editar">
+
+    <input type="reset" value="Restaurar">
+
+  <p>https://www.mundoprimaria.com/lecturas-para-ninos-primaria/lecturas-cortas-y-rapidas</p>
+
+  
 </body>
 </html>
